# ros_lidar_camera

./: .gitignore  CMakeLists.txt  README.md
intrinsics/: README.md  calibrate.sh  ost.txt  ost.yaml
src/intrinsics/: add_calibration_data.py  display_calibrated.launch  run.sh
src/lidar_camera/: CMakeLists.txt  README.md  data.launch  data.sh  package.xml
src/lidar_camera/include/: calibration_solver.h  colormap.h  lidar_camera_node.h  process_camera.h  process_lidar.h  solver.h  utils.h
src/lidar_camera/src/: calibration_solver.cpp  colormap.cpp  lidar_camera_node.cpp  process_camera.cpp  process_lidar.cpp  solver.cpp  utils.cpp
src/lidar_camera/test/: test_lidar_camera.cpp
